Ensure we show the entire snippet of code by breaking the word when it wraps to the next line

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -171,6 +171,7 @@
   line-height: 21px;
   margin-bottom: 40px;
   white-space: pre-wrap;
+  word-wrap: break-word;
   overflow-x: hidden;
 }
 .content blockquote :first-child {
